# Ros_Study

./: ros学习记录.md
HelloWorld/devel/: .catkin  .rosinstall  setup.fish
HelloWorld/devel/lib/hello_wang/: hello_wps  py_hello_world.py
HelloWorld/devel/lib/pkgconfig/: hello_wang.pc
HelloWorld/devel/share/hello_wang/cmake/: hello_wangConfig.cmake
HelloWorld/src/Hello_wang/: CMakeLists.txt  package.xml
HelloWorld/src/Hello_wang/launch/: hello.launch
HelloWorld/src/Hello_wang/src/: Hello.cpp
TF_study/: frames.gv
TF_study/devel/: .catkin
TF_study/devel/lib/pkgconfig/: tf_stu.pc
TF_study/devel/lib/tf_stu/: Tf_twotur_add  Tf_twotur_pub  Tf_twotur_sub  dynamic_tf_pub  dynamic_tf_sub  multipe_frame  tf_pub_node  tf_stu_node
TF_study/devel/share/tf_stu/cmake/: tf_stuConfig.cmake
TF_study/src/tf_stu/: CMakeLists.txt  package.xml
TF_study/src/tf_stu/launch/: multiple_frame.launch  tf_study.launch  tur_tf.launch  two_tur.launch
TF_study/src/tf_stu/src/: Tf_twotur_add.cpp  Tf_twotur_pub.cpp  Tf_twotur_sub.cpp  multipe_frame_sub.cpp  pub_tf.cpp  stu_tf.cpp  tur_tf.cpp  tur_tf_sub.cpp
com_serv/devel/: .catkin
com_serv/devel/include/com_test/: ADDsum.h  ADDsumRequest.h  ADDsumResponse.h  Person.h
com_serv/devel/lib/com_test/: Param_add  Param_delete  Param_search  Param_update  change_bk  control_tur  hello  msg_pub_test  msg_sev_test  pub_test  sev_test  srv_client  srv_curtle  srv_server  srv_tur_ser.py  sub_pose  use_head
com_serv/devel/lib/pkgconfig/: com_test.pc
com_serv/devel/lib/python3/dist-packages/com_test/msg/: _Person.py
com_serv/devel/lib/python3/dist-packages/com_test/srv/: _ADDsum.py  __init__.py
com_serv/devel/share/com_test/cmake/: com_test-msg-paths.cmake  com_testConfig.cmake
com_serv/devel/share/common-lisp/ros/com_test/msg/: Person.lisp  _package.lisp  _package_Person.lisp  com_test-msg.asd
com_serv/devel/share/common-lisp/ros/com_test/srv/: ADDsum.lisp  _package.lisp  _package_ADDsum.lisp  com_test-srv.asd
com_serv/devel/share/gennodejs/ros/com_test/msg/: Person.js
com_serv/devel/share/gennodejs/ros/com_test/srv/: ADDsum.js  _index.js
com_serv/devel/share/roseus/ros/com_test/: manifest.l
com_serv/devel/share/roseus/ros/com_test/msg/: Person.l
com_serv/devel/share/roseus/ros/com_test/srv/: ADDsum.l
com_serv/src/com_test/: CMakeLists.txt  package.xml
com_serv/src/com_test/include/com_test/: haha.h  hello.h
com_serv/src/com_test/launch/: comcation.launch  server.launch
com_serv/src/com_test/script/: change_background.py  msg_py_sev.py  pub_py.py  srv_client.py  srv_server.py  sub_pose.py
com_serv/src/com_test/src/: Param_search.cpp  Param_ser_talker.cpp  Param_update.cpp  change_background.cpp  control_show.cpp  haha.cpp  hello.cpp  msg_pub.cpp  msg_sev.cpp  param_delete.cpp  srv_msg_client.cpp  srv_msg_server.cpp  srv_tur_ser.cpp  test_pub.cpp  test_sev.cpp  turtlesim_control.cpp  use_haha.cpp
com_serv/src/com_test/srv/: ADDsum.srv
gazebo_sim/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh
gazebo_sim/devel/lib/pkgconfig/: gazebo_sim.pc
gazebo_sim/devel/share/gazebo_sim/cmake/: gazebo_simConfig.cmake
gazebo_sim/src/gazebo_sim/: CMakeLists.txt  package.xml
gazebo_sim/src/gazebo_sim/launch/: car.launch  car2.launch  hello.launch
gazebo_sim/src/gazebo_sim/models/first_building/: model.sdf
gazebo_sim/src/gazebo_sim/urdf/: camera.xacro  camera_car.xacro  car.xacro  control_car.xacro  inertial_set.xacro  laser.xacro
gazebo_sim/src/gazebo_sim/world/: haha.world
ros_pack/devel/: .catkin
ros_pack/devel/lib/pkgconfig/: pack_test.pc
ros_pack/devel/share/pack_test/cmake/: pack_testConfig.cmake
ros_pack/src/pack_test/: CMakeLists.txt  package.xml
ros_pack/src/pack_test/launch/: turtle.launch
sim_robot/devel/: .catkin  setup.fish  setup.sh
sim_robot/devel/lib/pkgconfig/: robot_sim.pc
sim_robot/devel/share/robot_sim/cmake/: robot_simConfig.cmake
sim_robot/src/robot_sim/: CMakeLists.txt
sim_robot/src/robot_sim/config/: box_camera.rviz  my_car_camera.rviz  red_car.rviz
sim_robot/src/robot_sim/launch/: box_camera.launch  cir_robot.launch  circle_robot.launch  my_car_camera.launch  red_car.launch
sim_robot/src/robot_sim/urdf/: add_laser_camera.xacro  box_camera.urdf  camera.xacro  cir_robot.urdf  cir_robot.xacro  circle_robot.urdf  larder.xacro  red_car.urdf
sim_slam/devel/: .catkin  local_setup.fish
sim_slam/devel/lib/pkgconfig/: slam_sim.pc
sim_slam/devel/share/slam_sim/cmake/: slam_simConfig.cmake
sim_slam/src/slam_sim/: CMakeLists.txt
sim_slam/src/slam_sim/config/: nav.rviz  rviz_slam.rviz
sim_slam/src/slam_sim/launch/: car2.launch  crt_map.launch  explore.launch  move_bs.launch  nav.launch  pose_show.launch  save_map.launch  show_map.launch  slam_nav.launch
sim_slam/src/slam_sim/map/: nav.pgm  nav.yaml
sim_slam/src/slam_sim/models/first_building/: model.config
sim_slam/src/slam_sim/urdf/: car.xacro  dep_camera.xacro  hello.urdf  laser_car.xacro  my_car.xacro
sim_slam/src/slam_sim/world/: wang_building.world
